--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -6,7 +6,7 @@
             <div class="card-body" style="text-align: center;">
                 <div class="m-t-30"> <img src="../assets/images/6073873.png" class="img-circle" width="150" />
                     <h4 class="card-title m-t-10">{{usuario.nombre}}</h4>
-                    <h6 class="card-subtitle">Accoubts Manager Amix corp</h6>
+                    <h6 class="card-subtitle">Usuario freetags</h6>
                 </div>
             </div>
             <div>
@@ -16,9 +16,7 @@
                 <h6>{{usuario.telcel}}</h6> <small class="text-muted p-t-30 db">Referencia</small>
                 <h6>{{usuario.telref}}</h6>
                 <br/>
-                <button class="btn btn-circle btn-secondary">
-                
-                </button>
+                <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="button" (click)="onAvisar()">Avisar</button>
             </div>
         </div>
     </div>
