--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -16,8 +16,8 @@
                    
                </div>
                <footer class="footer">
-                © 2024 freetags
-            </footer>
+                © 2024 freetags     V 1.0.0    
+                </footer>
           </div>
       
   </div>
