--- a/src/app/pages/qr/qr.component.html
+++ b/src/app/pages/qr/qr.component.html
@@ -10,7 +10,9 @@
                                 <th>#</th>
                                 <th>Nombre</th>
                                 <th>Descripción</th>
+                                <th>Código</th>
                                 <th>Fecha</th>
+                                <th>Cliente</th>
                                 <th>Estado</th>
                                 <th>Acción</th>
                             </tr>
@@ -21,14 +23,20 @@
                                 <td>{{item.id}}</td>
                                 <td>{{item.nombre}}</td>
                                 <td>{{item.descripcion}}</td>
+                                <td>{{item.codigo_qr}}</td>
                                 <td>{{item.fecha_creacion }}</td>
+                                <td *ngIf="item.usuario_id > 0">
+                                    <button  class="btn btn-outline-principal fom-control btn-grid "  data-toggle="modal" data-target="#add-contact" style="background: transparent" color="red" (click)="onVerCliente(item)"><i class="fa fa-user"></i></button> 
+                                </td>
+                                <td *ngIf="item.usuario_id  == null"> - </td>
                                 <td *ngIf="item.tipo_estado_id == 3"><span class="label label-danger"  >Extraviado</span></td>
                                 <td *ngIf="item.tipo_estado_id == 2"><span class="label label-success">Activo</span></td>
                                 <td *ngIf="item.tipo_estado_id == 1"><span class="label label-info">Inactivo</span></td>
                                 <td>
-                                    <!-- <button  class="btn btn-outline-principal fom-control btn-grid "  data-toggle="modal" data-target="#add-contact" style="background: transparent" color="red"><i class="fa fa-trash"></i></button> -->
-                                    <button  class="btn btn-outline-principal fom-control btn-grid " (click)="onClickProducto(item)"  data-toggle="modal" data-target="#add-contact" style="background: transparent">
-                                        <i class="fa fa-binoculars" aria-hidden="true"></i></button>
+                                    <button  class="btn btn-outline-principal fom-control btn-grid "  data-toggle="modal" data-target="#add-borrar" style="background: transparent" color="red"><i class="fa fa-trash"></i></button>
+                                    <!-- <button  class="btn btn-outline-principal fom-control btn-grid " (click)="onClickProducto(item)"  data-toggle="modal" data-target="#add-contact" style="background: transparent">
+                                        <i class="fa fa-binoculars" aria-hidden="true"></i>
+                                    </button> -->
                                  </td>
                              </tr>
                         </tbody>
@@ -38,26 +46,27 @@
         </div>
     </div>  
 </div> 
-
-
-
 <div id="add-contact" class="modal fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">Cambiar Estado</h4>
+                <h4 class="modal-title" id="myModalLabel">Código Qr Vinculado</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             </div>
             <div class="modal-body">
-                <select [(ngModel)]="_estado" name="_estado" class="form-control float-right col-md-12">
-                    <option [value]="0">Seleccione el estado</option>
-                    <option [value]="3">Extraviado</option>
-                    <option [value]="1">Inactivo</option>
-                </select>               
-    
+                <div class="form-group m-t-20">
+                    <div class="col-xs-12">
+                        <input class="form-control" type="text" [ngModel] = usuario.nombre readonly>
+                    </div>
+                    <div class="col-xs-12">
+                        <input class="form-control" type="text" [ngModel] = usuario.telcel readonly>
+                    </div>
+                    <div class="col-xs-12">
+                        <input class="form-control" type="text" [ngModel] = usuario.telref readonly>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="onCambiarEstado()">Guardar</button>
                 <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Cancel</button>
             </div>
         </div>
