--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -11,16 +11,24 @@
                 </li>
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
-                <li> 
+                <li *ngIf="_rol=='manager'"> 
+                    <a class="has-arrow waves-effect waves-dark" [routerLink]="['/cliente']" routerLinkActive="router-link-active" ><i class="mdi mdi-gauge"></i><span class="hide-menu">Clientes <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
+                </li>
+                <li *ngIf="_rol!='manager'"> 
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
                 </li>
-                <li> <a class="has-arrow waves-effect waves-dark"  aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Productos</span></a>
+                <li *ngIf="_rol!='manager' && _rol=='rz'"> 
+                    <a class="has-arrow waves-effect waves-dark" [routerLink]="['/qr']" routerLinkActive="router-link-active"   aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">QR's <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
+                </li>
+                <li *ngIf="_rol!='manager'  && _rol!='rz'"> 
+                     <a class="has-arrow waves-effect waves-dark"  aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Productos</span></a>
                     <ul aria-expanded="false" class="collapse">
                         <li><a [routerLink]="['/productos']">Productos</a></li>
                         <li><a [routerLink]="['/producto']">Nuevo producto</a></li>
                     </ul>
                 </li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Inbox</span></a>
+                <li *ngIf="_rol!='manager'"> 
+                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Inbox</span></a>
                     <ul aria-expanded="false" class="collapse">
                          <li><a [routerLink]="['/email']" routerLinkActive="router-link-active"  >Emails</a></li>
                     </ul>
@@ -29,5 +37,6 @@
         </nav>
         <!-- End Sidebar navigation -->
     </div>
+    
     <!-- End Sidebar scroll-->
 </aside>
