--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -2,7 +2,11 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <button class="btn btn-info  btn-block text-uppercase waves-effect waves-light" type="button"  data-toggle="modal" data-target="#add-contact"  style="width: 20%; float: right;">Nuevo</button>
+                <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="button"  data-toggle="modal" data-target="#add-contact"  style="width: 20%; float: right;">Nuevo </button>
+                <!-- <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"   (click)="onAbrirGeneradorDeCogigo()" type="button" data-target="#add-contact"  style="width: 20%; float: right; margin-top: 1px;">
+                        Qr
+                </button> -->
+              
             </div>
             <div class="card-body">
                 <div class="table-responsive">
