--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -61,7 +61,7 @@
                             <div class="form-group">
                                 <label class="col-md-12">Nombres</label>
                                 <div class="col-md-12">
-                                    <input type="text" placeholder="{{usuario.nombre}}" class="form-control form-control-line">
+                                    <input type="text"  class="form-control form-control-line" formControlName="nombre">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -70,22 +70,16 @@
                                     <input type="email" placeholder="{{usuario.email}}"  readonly class="form-control form-control-line" name="example-email" id="example-email">
                                 </div>
                             </div>
-                            <!-- <div class="form-group">
-                                <label class="col-md-12">Password</label>
-                                <div class="col-md-12">
-                                    <input type="password" value="password" class="form-control form-control-line">
-                                </div>
-                            </div> -->
                             <div class="form-group">
                                 <label class="col-md-12">Teléfono</label>
                                 <div class="col-md-12">
-                                    <input type="text" placeholder="{{usuario.telref}}" class="form-control form-control-line">
+                                    <input type="text"  class="form-control form-control-line" formControlName="telref" (keypress)="validateFormat($event)">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-12">Celular</label>
                                 <div class="col-md-12">
-                                    <input type="text" placeholder="{{usuario.telcel}}" class="form-control form-control-line">
+                                    <input type="text"  class="form-control form-control-line" formControlName="telcel" (keypress)="validateFormat($event)">
                                 </div>
                             </div>
                         
