--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -13,11 +13,10 @@
                             </div>
                         </div>
                      </div> -->
-                   
                </div>
                <footer class="footer">
-                © 2024 freetags
-            </footer>
+                © 2024 freetags  V 1.2.0    
+                </footer>
           </div>
       
   </div>
