--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -1,1 +1,92 @@
-<p>clientes works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+                <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="button"  data-toggle="modal" data-target="#add-contact"  style="width: 20%; float: right;">Nuevo </button>
+                <!-- <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"   (click)="onAbrirGeneradorDeCogigo()" type="button" data-target="#add-contact"  style="width: 20%; float: right; margin-top: 1px;">
+                        Qr
+                </button> -->
+              
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Nombre</th>
+                                <th>Dirección</th>
+                                <th>Teléfono</th>
+                                <th>Email</th>
+                                <th>Fecha de actividad</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                             <tr  *ngFor="let item of razonSociales">
+                           
+                                <td>{{item.id}}</td>
+                                <td>{{item.nombre}}</td>
+                                <td>{{item.direccion}}</td>
+                                <td>{{item.telefono }}</td>
+                                <td>{{item.correo }}</td>
+                                <td>{{item.fecha_creacion }}</td>
+                             </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>  
+</div> 
+
+
+
+<div id="add-contact" class="modal fade in" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Freetags</h4>
+                <button  #buttonCerrar type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="card-title">Formulario para un nuevo cliente</h4>
+                                <form [formGroup]="rzForm" (ngSubmit)="submitForm()" novalidate>  
+                                    <div class="form-group">
+                                        <label>Nombre</label>
+                                        <input type="text" class="form-control form-control-line" value="Nombre"  placeholder="Nombre" formControlName="nombre"> </div>
+                                    <div class="form-group">
+                                        <label for="example-email">Dirección</label>
+                                        <input type="email" id="example-email2" name="example-direccion" class="form-control" placeholder="Dirección" formControlName="direccion"> 
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="example-email">Teléfono</label>
+                                        <input type="email" id="codigoQr" name="example-telefon" class="form-control" placeholder="Teléfono" formControlName="telefono"> 
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="example-email">Email</label>
+                                        <input type="email" id="codigoQr" name="example-telefon" class="form-control" placeholder="Email" formControlName="email"> 
+                                    </div>
+                                    <div class="form-group text-center m-t-20">
+                                        <div class="col-xs-12">
+                                            <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Guardar</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>    
+                    </div>
+                
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+
