--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,9 +3,10 @@
         <div class="card-body">
         
                 <a  class="text-center db">
-                        <img src="./assets/images/logo-icon.png" alt="Home" /><br/>
-                        <img src="./assets/images/logo-text.png" alt="Home" /></a>
-                
+                        <img  style="width: 30%" src="./assets/images/logo-icon.png" alt="Home" />
+                        <br/>
+                        <img style="width: 41%;margin-left: 34px;" src="./assets/images/logo-text.png" alt="Home" />
+                </a>
                 <div class="form-group m-t-40">
                     <div class="col-xs-12">
                         <input class="form-control" type="text" required="" placeholder="Email" [(ngModel)]="email">
@@ -17,8 +18,10 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="col-md-12">
-                        <a  id="to-recover" class="text-dark pull-right" data-toggle="modal" data-target="#add-contact"><i class="fa fa-lock m-r-5"></i>¿Olvidaste tu nombre de usuario?</a> 
+                    <div class="col-md-12 text-center">
+                        <a  id="to-recover" class="text-dark pull-right" data-toggle="modal" data-target="#add-contact" style="margin-right: 37px;">
+                            <i class="fa fa-lock m-r-5"></i>¿Olvidaste tu nombre de usuario?
+                       </a> 
                     </div>
                 </div>
                 <div class="form-group text-center m-t-20">
