--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -3,9 +3,9 @@
         <div class="card">
             <div class="card-header">
                 <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="button"  data-toggle="modal" data-target="#add-contact"  style="width: 20%; float: right;">Nuevo </button>
-                <!-- <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"   (click)="onAbrirGeneradorDeCogigo()" type="button" data-target="#add-contact"  style="width: 20%; float: right; margin-top: 1px;">
+                <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"   (click)="onAbrirGeneradorDeCogigo()" type="button" data-target="#add-contact"  style="width: 20%; float: right; margin-top: 1px;">
                         Qr
-                </button> -->
+                </button>
               
             </div>
             <div class="card-body">
@@ -23,7 +23,6 @@
                         </thead>
                         <tbody>
                              <tr  *ngFor="let item of razonSociales">
-                           
                                 <td>{{item.id}}</td>
                                 <td>{{item.nombre}}</td>
                                 <td>{{item.direccion}}</td>
@@ -57,7 +56,8 @@
                                 <form [formGroup]="rzForm" (ngSubmit)="submitForm()" novalidate>  
                                     <div class="form-group">
                                         <label>Nombre</label>
-                                        <input type="text" class="form-control form-control-line" value="Nombre"  placeholder="Nombre" formControlName="nombre"> </div>
+                                        <input type="text" class="form-control form-control-line" value="Nombre"  placeholder="Nombre" formControlName="nombre">
+                                     </div>
                                     <div class="form-group">
                                         <label for="example-email">Dirección</label>
                                         <input type="email" id="example-email2" name="example-direccion" class="form-control" placeholder="Dirección" formControlName="direccion"> 
