--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,9 +20,12 @@
                 <li *ngIf="_rol!='manager' && _rol=='rz'"> 
                     <a class="has-arrow waves-effect waves-dark" [routerLink]="['/qr']" routerLinkActive="router-link-active"   aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">QR's <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
                 </li>
-                <li *ngIf="_rol!='manager'  && _rol!='rz'"> 
-                     <a class="has-arrow waves-effect waves-dark"  aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Productos</span></a>
-                    <ul aria-expanded="false" class="collapse">
+                <li *ngIf="_rol!='manager' && _rol!='rz'"> 
+                    <a class="has-arrow waves-effect waves-dark" (click)="toggleSubMenu('productosMenu')" aria-expanded="true">
+                        <i class="mdi mdi-bullseye"></i>
+                        <span class="hide-menu">Productos</span>
+                    </a>
+                    <ul [id]="'productosMenu'" [attr.aria-expanded]="isSubMenuOpen('productosMenu')" class="collapse">
                         <li><a [routerLink]="['/productos']">Productos</a></li>
                         <li><a [routerLink]="['/producto']">Nuevo producto</a></li>
                     </ul>
