--- a/src/app/pages/email/email.component.html
+++ b/src/app/pages/email/email.component.html
@@ -7,7 +7,7 @@
                             <form  [formGroup]="emailForm"  (ngSubmit)="submitForm()" novalidate>                           
                                 <h3 class="card-title">Nuevo email</h3>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="To:"  value="info@freetags.com.ar"  readonly>
+                                    <input class="form-control" placeholder="To:"  value="freetag@bag-tag.vip"  readonly>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Subject:" formControlName="asunto">
